plugins {
    id 'java'
    id 'com.gradleup.shadow' version '9.0.0-beta4' apply false
}

subprojects {
    apply plugin: 'java'
    apply plugin: 'maven-publish'

    group = 'ru.loper'
    version = '1.0.2-RELEASE'

    repositories {
        mavenCentral()
        maven { url = "https://repo.papermc.io/repository/maven-public/" }
        maven { url = "https://oss.sonatype.org/content/groups/public/" }
        maven { url = "https://jitpack.io" }
        maven { url = "https://repo.extendedclip.com/content/repositories/placeholderapi/" }
        maven { url = "https://repo.rosewooddev.io/repository/public/" }
        maven { url = "https://libraries.minecraft.net/" }
    }

    java {
        toolchain.languageVersion = JavaLanguageVersion.of(21)
    }

    tasks.withType(JavaCompile).configureEach {
        options.encoding = 'UTF-8'
    }

    tasks.named('jar') {
        archiveVersion.set(project.version)
    }
}